--- a/Lyn-website/illustration.html
+++ b/Lyn-website/illustration.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		
-        <title>Lyn Harris</title>
+        <title>Lyn Harris!</title>
 		
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="TheLynConcept | Lyn Harris" />
