--- a/Lyn-website/enter.html
+++ b/Lyn-website/enter.html
@@ -22,6 +22,9 @@
 		<link rel="stylesheet" type="text/css" href="css/navigation.css" />
 		<link rel="stylesheet" href="css/normalize.css" />
 		<script type="text/javascript" src="http://www.queness.com/js/bsa.js?t=123322"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"> </script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"> </script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"> </script>
 		
 
 		<!-- Responsive Nav -->
@@ -55,7 +58,7 @@
 				
 			});
 		</script>
-
+			<!-- FANCYBOX IMAGES -->
 		<script type="text/javascript">
 			$(function($){
 				var addToAll = false;
