--- a/Lyn-website/print.html
+++ b/Lyn-website/print.html
@@ -35,7 +35,7 @@
 		    <ul class="clearfix">
 		        
 		        <li>
-		        	<a href="http://www.thelynconcept.com/enter">
+		        	<a href="http://www.thelynconcept.com/home">
 		        		<font color="bad433">&Xi;&ensp;</font>Home
 		        	</a>
 		        </li>
