deleted DOChtml from all pages and fixed index page

--- a/Lyn-website/logos.html
+++ b/Lyn-website/logos.html
@@ -8,7 +8,7 @@
         <title>Lyn Harris</title>
 		
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="TheLynConcept | LLyn Harris">
+        <meta name="description" content="TheLynConcept | Lyn Harris">
         <meta name="keywords" content="images, logos, portfolio, graphic design, illustration, photography, black artist, black photographer, poster, design">
         <meta name="author" content="Codrops">
 		<meta http-equiv="content-language" content="en">
