fixed img syntax error on all pages

--- a/Lyn-website/humans.html
+++ b/Lyn-website/humans.html
@@ -78,8 +78,12 @@
 		</nav>
 
 
-		<div class="absolute"> <img class="absolute" src="img/design/logo/lhhwhite.png> </div>
-		<div class="footer"> <p class="footer">©<br>Lyn<br>Harris<br>2016</p> </div>
+		<div class="absolute"> 
+			<img class="absolute" src="img/design/logo/lhhwhite.png"> 
+		</div>
+		<div class="footer"> 
+			<p class="footer">©<br>Lyn<br>Harris<br>2016</p> 
+		</div>
 			
 		<div align="center">
 					
