--- a/Lyn-website/illustration.html
+++ b/Lyn-website/illustration.html
@@ -77,8 +77,12 @@
 		    <li><a href="#" id="pull"><font color="ffffff">&Xi;&ensp;</font>Menu</a></li>
 		</nav>
 
-		<div class="absolute"> <img class="absolute" src="img/design/logo/lhhwhite.png> </div>
-		<div class="footer"> <p class="footer"> ©<br>Lyn<br>Harris<br>2016</p> </div>
+		<div class="absolute"> 
+			<img class="absolute" src="img/design/logo/lhhwhite.png"> 
+		</div>
+		<div class="footer"> 
+			<p class="footer">©<br>Lyn<br>Harris<br>2016</p> 
+		</div>
 			
 			<div align="center">
 					<div class="thumbnail">
