--- a/Lyn-website/index.html
+++ b/Lyn-website/index.html
@@ -30,7 +30,7 @@
 		</div>
 		
 		<div class="footer"> 
-			<p class="footer"> ©<br>Lyn<br>Harris<br>2016 </p> 
+			<p class="footer"> ©<br>Lyn<br>Harris<br>2016</p> 
 		</div>
 		
 		<ul class="cb-slideshow">
@@ -50,7 +50,7 @@
 						<font color="bad433">&Xi;&ensp;</font>Enter
 					</font>
 				</a>                
-                <div class="clr"></div>
+                <!-- <div class="clr"></div> -->
             </div><!--/ Codrops top bar -->  
 		</div>	
 	</body>
