--- a/Lyn-website/print.html
+++ b/Lyn-website/print.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src="http://www.queness.com/js/bsa.js?t=123322"></script>
 		<script src="js/jquery.1.7.1.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/infinite.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"> </script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"> </script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"> </script>
@@ -32,7 +33,7 @@
 	<body>
 
 		<nav class="clearfix">
-		    <ul class="clearfix">
+		    <ul class="clearfix" id="images">
 		        <li>
 		        <a href=""> 
 					<li class="navItem">
