--- a/Lyn-website/print.html
+++ b/Lyn-website/print.html
@@ -17,55 +17,71 @@
 		<link rel="icon" type="image/png" href="img/design/logo/lhhblack.png">
 		
 		<!--insert external style sheet and Javascript--> 		
-		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-		<link rel="stylesheet" type="text/css" href="css/navigation.css">
+<!-- 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+ -->		<link rel="stylesheet" type="text/css" href="css/navigation.css">
 		<link rel="stylesheet" href="css/normalize.css">
 		<script type="text/javascript" src="http://www.queness.com/js/bsa.js?t=123322"></script>
 		<script src="js/jquery.1.7.1.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="js/infinite.js"></script>
+		<script src="lazyload.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"> </script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"> </script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"> </script>
+
+		<style>
+			.fancybox {
+				display: block;
+                width: 100%;
+                height: auto;
+                min-height: 300px;
+			}
+			/*img:not([src]) {
+                visibility: hidden;
+            }*/
+            @-moz-document url-prefix() {
+                img:-moz-loading {
+                    visibility: hidden;
+                }
+            }
+
+			#images {
+			    margin: 0 auto;
+			    padding: 0;
+			    width: 640px;
+			    list-style-type: none;
+			}
+		</style>
 	</head>
 
 
 	<body>
 
 		<nav class="clearfix">
-		    <ul class="clearfix" id="images">
+		    <ul class="clearfix">
 		        <li>
 		        <a href=""> 
 					<li class="navItem">
 						<p>Home</p> 
 					</li>
 				</a>
-				</li>
-				<li>
 				<a href=""> 
 					<li class="navItem">
 						<p class="active">Design</p> 
 					</li>
-				</a></li>
-				<li>
 				<a href=""> 
 					<li class="navItem">
 						<p>Photography</p> 
 					</li>
 				</a>
-				</li>
-				<li>
 				<a href=""> 
 					<li class="navItem">
 						<p>Illustration</p> 
 					</li>
-				</a></li>
-				<li>
 				<a href=""> 
 					<li class="navItem">
 						<p>Social Media</p> 
 					</li>
-				</a></li>
+				</a>
 
 		    </ul>
 		    <li><a href="#" id="pull"><font color="ffffff">&Xi;&ensp;</font>Menu</a></li>
@@ -79,94 +95,94 @@
 			<p class="footer">©<br>Lyn<br>Harris<br>2016</p> 
 		</div>
 			
-		<div align="center">
+		<div align="center" id="images">
 					
-			<div class="thumbnail2">
-				<a href="https://issuu.com/ouzimag/docs/ouzi_issue_1_2017" target="_blank"> <img src="img/design/print/tag3.jpg"> </a>
+			<div class="test">
+				<a href="https://issuu.com/ouzimag/docs/ouzi_issue_1_2017" target="_blank"> <img data-original="img/design/print/tag3.jpg"> </a>
 			</div>
 			
-			<div class="thumbnail2">
-				<a href="https://issuu.com/thelynconcept/docs/juice" target="_blank"> <img src="img/design/print/tag.jpg"> </a>
+			<div class="test">
+				<a href="https://issuu.com/thelynconcept/docs/juice" target="_blank"> <img data-original="img/design/print/tag.jpg"> </a>
 			</div>
 			
-			<div class="thumbnail2">
-				<a href="https://issuu.com/thelynconcept/docs/coffee_and_conversations" target="_blank"> <img src="img/design/print/tag2.jpg"> </a>
+			<div class="test">
+				<a href="https://issuu.com/thelynconcept/docs/coffee_and_conversations" target="_blank"> <img data-original="img/design/print/tag2.jpg"> </a>
 			</div>
 
-			<div class="thumbnail">
-				<img src="img/design/print/fhync1.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync1.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail2">
-				<img src="img/design/print/fhync2.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync2.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail2">
-				<img src="img/design/print/fhync3.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync3.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail2">
-				<img src="img/design/print/fhync4.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync4.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail">
-				<img src="img/design/print/fhync5.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync5.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail">
-				<img src="img/design/print/fhync6.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync6.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail">
-				<img src="img/design/print/fhync7.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync7.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail">
-				<img src="img/design/print/fhync8.jpg" class="fancybox" alt="Image">
+			<div class="test">
+				<img data-original="img/design/print/fhync8.jpg" class="fancybox" alt="Image">
 			</div>
 
-			<div class="thumbnail2">
-				<img src="img/design/print/tough.jpg" class="fancybox" alt="Tough">
+			<div class="test">
+				<img data-original="img/design/print/tough.jpg" class="fancybox" alt="Tough">
 			</div>
 			
-			<div class="thumbnail">
-				<img src="img/design/print/olive.jpg" class="fancybox" alt="Olive">
+			<div class="test">
+				<img data-original="img/design/print/olive.jpg" class="fancybox" alt="Olive">
 			</div>
 
-			<div class="thumbnail">
-				<img src="img/design/print/rhinoceros.jpg" class="fancybox" alt="Rhinoceros">
+			<div class="test">
+				<img data-original="img/design/print/rhinoceros.jpg" class="fancybox" alt="Rhinoceros">
 			</div>
 			
-			<div class="thumbnail">
-				<img src="img/design/print/history.jpg" class="fancybox" alt="History">
+			<div class="test">
+				<img data-original="img/design/print/history.jpg" class="fancybox" alt="History">
 			</div>
 			
-			<div class="thumbnail2">
-				<img src="img/design/print/hypersexual.jpg" class="fancybox" alt="Hypersexual">
+			<div class="test">
+				<img data-original="img/design/print/hypersexual.jpg" class="fancybox" alt="Hypersexual">
 			</div>
 			
-			<div class="thumbnail2">
-				<img src="img/design/print/offer.jpg" class="fancybox" alt="Offer">
+			<div class="test">
+				<img data-original="img/design/print/offer.jpg" class="fancybox" alt="Offer">
 			</div>
 			
-			<div class="thumbnail2">
-				<img src="img/design/print/beauty.jpg" class="fancybox" alt="Beauty">
+			<div class="test">
+				<img data-original="img/design/print/beauty.jpg" class="fancybox" alt="Beauty">
 			</div>
 			
-			<div class="thumbnail">
-				<img src="img/design/print/hair.jpg" class="fancybox" alt="Hair">
+			<div class="test">
+				<img data-original="img/design/print/hair.jpg" class="fancybox" alt="Hair">
 			</div>
 			
-			<div class="thumbnail">
-				<img src="img/design/print/stereotypes.jpg" class="fancybox" alt="Stereotypes">
+			<div class="test">
+				<img data-original="img/design/print/stereotypes.jpg" class="fancybox" alt="Stereotypes">
 			</div>
 			
-			<div class="thumbnail">
-				<img src="img/design/print/youth.jpg" class="fancybox" alt="Youth">
+			<div class="test">
+				<img data-original="img/design/print/youth.jpg" class="fancybox" alt="Youth">
 			</div>
 
-			<div class="thumbnail2">
-				<img src="img/design/print/x-magazine.jpg" class="fancybox" alt="X Magazine Cover">
+			<div class="test">
+				<img data-original="img/design/print/x-magazine.jpg" class="fancybox" alt="X Magazine Cover">
 			</div>	
 		</div>
 	</body>
