--- a/Lyn-website/objects.html
+++ b/Lyn-website/objects.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -31,8 +32,8 @@
 
 	<body>
 
-		<nav class="clearfix">
-		    <ul class="clearfix">
+		<nav>
+		    <ul>
 		        
 		        <li>
 		        	<a href="http://www.thelynconcept.com/home">
@@ -70,6 +71,7 @@
 						<font color="bad433">&Xi;&ensp;</font>Social Media
 					</p>
 					<a href="https://www.instagram.com/thelynconcept/" target="_blank">Instagram</a>
+
 					<a href="http://thelynconcept.tumblr.com/" target="_blank">Tumblr</a>
 					<a href="https://www.pinterest.com/thelynconcept/" target="_blank">Pinterest</a>
 					<a href="mailto:lyn.harrish@gmail.com">Lyn.Harrish@gmail.com </a>
