update menu for each page

--- a/mfs/about.html
+++ b/mfs/about.html
@@ -75,13 +75,13 @@
 
 		<nav>
 			<ul>
-				<li><a class="a-unstyled" href="./index.html">Home</a></li>
-				<li><a class="a-unstyled" href="./locations.html">Locations</a></li>				
+				<li><a class="active a-unstyled" href="./index.html">Home</a></li>
 				<li><a class="a-unstyled" href="./services.html">Services</a></li>
-				<li><a class="active a-unstyled" href="./about.html">About Stasha</a></li>
-				<li><a class="a-unstyled" href="./contact-us.html">Contact US</a></li>
-				<li><a class="a-unstyled" href="https://www.vagaro.com/magicfingersstudio">Book Studio 1</a></li>
-				<li><a class="a-unstyled" href="https://www.vagaro.com/magicfingersstudio2">Book Studio 2</a></li>
+				<li><a class="a-unstyled" href="./pictures-videos.html">Gallery</a></li>
+				<li><a class="a-unstyled" href="https://www.eventbrite.com/o/magicfingers-studio-classes-11375416394" target="_blank">Events</a></li>
+				<li><a class="a-unstyled" href="https://magicfingersstudio.mykajabi.com/" target="_blank">Tutorials</a></li>
+				<li><a class="a-unstyled" href="./about.html">About Stasha</a></li>
+				<li><a class="a-unstyled" href="./contact-us.html">Contact</a></li>
 			</ul>
 		</nav>		
 
