--- a/mfs/kids-braids.html
+++ b/mfs/kids-braids.html
@@ -87,9 +87,9 @@
 			<ul>
 				<li><a class="active a-unstyled" href="./index.html">Home</a></li>
 				<li><a class="a-unstyled" href="./services.html">Services</a></li>
-				<li><a class="a-unstyled" href="./gallery.html">Gallery</a></li>
-				<li><a class="a-unstyled" href="https://www.eventbrite.com/o/magicfingers-studio-classes-11375416394">Events</a></li>
-				<li><a class="a-unstyled" href="https://magicfingersstudio.mykajabi.com/">Tutorials</a></li>
+				<li><a class="a-unstyled" href="./pictures-videos.html">Gallery</a></li>
+				<li><a class="a-unstyled" href="https://www.eventbrite.com/o/magicfingers-studio-classes-11375416394" target="_blank">Events</a></li>
+				<li><a class="a-unstyled" href="https://magicfingersstudio.mykajabi.com/" target="_blank">Tutorials</a></li>
 				<li><a class="a-unstyled" href="./about.html">About Stasha</a></li>
 				<li><a class="a-unstyled" href="./contact-us.html">Contact</a></li>
 			</ul>
