--- a/mfs/pictures-videos.html
+++ b/mfs/pictures-videos.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Gallery | Magic Fingers Studio</title>
+		<title>Pictures/Videos | Magic Fingers Studio</title>
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
 		<link href="default.css" rel="stylesheet" type="text/css" media="all" />
