--- a/mfs/pictures-videos.html
+++ b/mfs/pictures-videos.html
@@ -81,6 +81,7 @@
 				<li><a class="a-unstyled" href="https://magicfingersstudio.mykajabi.com/" target="_blank">Tutorials</a></li>
 				<li><a class="a-unstyled" href="./about.html">About Stasha</a></li>
 				<li><a class="a-unstyled" href="./contact-us.html">Contact</a></li>
+				<li><a class="a-unstyled" href="https://magicfingersstudio.com/store">Store</a></li>
 			</ul>
 		</nav>	
 
