removed Now Open from second location

--- a/mfs/locations.html
+++ b/mfs/locations.html
@@ -169,8 +169,8 @@
 
 							<h2 class="sub-title-red">Studio 2</h2>
 							<hr class="red">
-							<p><redtext>NOW OPEN</redtext>	</p>
-							<p class="reg">5319 Church Ave,<br /> 
+<!-- 							<p><redtext>NOW OPEN</redtext>	</p>
+ -->							<p class="reg">5319 Church Ave,<br /> 
 								Brooklyn, NY, 11203</p>
 							
 							<p><a class="link-directions" href="https://goo.gl/maps/h9i1zX2rPxt" target="_blank">Get Directions</a></p>
