--- a/mfs/index.html
+++ b/mfs/index.html
@@ -47,6 +47,12 @@
 
 			});
 		</script>
+		
+		<!-- MAILCHIMP SUBSCRIPTION POPUP -->
+		<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">	
+		</script>
+		<script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"e57539882f1eec87359b89960","lid":"1e5572bca7"}) })
+		</script>
 	</head>
 
 
