--- a/mfs/contact-us.html
+++ b/mfs/contact-us.html
@@ -21,7 +21,7 @@
 
 		<!-- Responsive Nav -->
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
 		<script>
 			$(document).ready(function(){
@@ -201,7 +201,7 @@
 						<div class="col-12">
 								
 							<p class="footer">
-							Copyright &copy; 2017. All rights reserved. | Site by <a class="a-footer" href="http://www.thelynconcept.com/" target="_blank">Lyn Harris</a>.
+							Copyright &copy; 2017. All rights reserved. | Site by <a class="a-footer" href="https://www.thelynconcept.com/" target="_blank">Lyn Harris</a>.
 							</p>
 									
 						</div>
